Modernize AbstractDataTreeChangeListenerTest a bit
Use List for changes, along with local variable type inference. Also
make sure we complete whenever we have at least the number of expected
changes.

Change-Id: I4b05fbc9ee02315312d4e0ecaad0aa09f1b371f3
Signed-off-by: Robert Varga <robert.varga@pantheon.tech>